<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/Inicio" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/notification"
        android:title="@string/Notificaciones" />

    <item
        android:id="@+id/navigation_registrodemarcas"
        android:icon="@drawable/factory"
        android:title="@string/Empresa" />

    <item
        android:id="@+id/navigation_desempeno"
        android:icon="@drawable/combochart"
        android:title="@string/Desempeño" />

    <item
        android:id="@+id/navigation_usuario"
        android:icon="@drawable/circleduser"
        android:title="@string/Usuario" />
</menu>