<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.aisoftware.firebasetesting.UI.home.HomeFragment"
        android:label="@string/Inicio"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.aisoftware.firebasetesting.UI.notifications.NotificationsFragment"
        android:label="@string/Notificaciones"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_empresa"
        android:name="com.aisoftware.firebasetesting.UI.empresa.FragmentEmpresa"
        android:label="@string/Empresa"
        tools:layout="@layout/fragment_empresa" />

    <fragment
        android:id="@+id/navigation_desempeno"
        android:name="com.aisoftware.firebasetesting.UI.desempeno.FragmentDesempeno"
        android:label="@string/Desempeño"
        tools:layout="@layout/fragment_desempeno" />

    <fragment
        android:id="@+id/navigation_usuario"
        android:name="com.aisoftware.firebasetesting.UI.usuario.FragmentUsuario"
        android:label="@string/Usuario"
        tools:layout="@layout/fragment_usuario" />

</navigation>